# tg-avatar-changer-bot

./: .gitignore  Cargo.toml  Makefile  build.rs  config.yaml.sample
src/: avatar_api.rs  avatar_provider.rs  lib.rs  main.rs
src/avatar_api/: dreamcore.rs  mock.rs  solid_color.rs  unsplash.rs
src/avatar_provider/: folder.rs  solid_color.rs  unsplash.rs
