[package]
name = "tg-avatar-changer-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tdlib-rs = { version = "1.1.0", features = ["local-tdlib"] }
pretty_env_logger = "0.5.0"
log = "0.4.28"
image = "0.25.8"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"]}
derive-new = "0.7.0"
tempfile = "3.23.0"
regex = "1.12.2"
thiserror = "2.0.17"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"]}
config = { version = "0.15.18", features = ["yaml"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
dreamcore_image_processor = { git = "https://github.com/sqlerrorthing/dreamcore_image_processor" }

[build-dependencies]
tdlib-rs = { version = "1.1.0", features = [ "local-tdlib" ] }